--- a/PlasticManufacturer.Client/app/opacities/opacity.componet.html
+++ b/PlasticManufacturer.Client/app/opacities/opacity.componet.html
@@ -4,7 +4,7 @@
         <h2 class="clipboard">{{pageTitle}}</h2>
     </div>
     <div class="col-md-4">
-        <form (ngSubmit)="save()" [formGroup]="carrierForm">
+        <form (ngSubmit)="save()" [formGroup]="opacityForm">
             <div class="panel-container">
                 <div class="options">
                     <ul>
