--- a/PlasticManufacturer.Client/index.html
+++ b/PlasticManufacturer.Client/index.html
@@ -12,7 +12,6 @@
 
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
-
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script src="node_modules/toastr/build/toastr.min.js"></script>
@@ -26,6 +25,10 @@
     <link href="node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/responsive/2.2.0/js/dataTables.responsive.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="jquery-fns.js" type="text/javascript"></script>
 
     <script src="systemjs.config.js"></script>
     <script>
