--- a/PlasticManufacturer.Client/index.html
+++ b/PlasticManufacturer.Client/index.html
@@ -23,6 +23,7 @@
 
 
     <link href="node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <script src="systemjs.config.js"></script>
