--- a/PlasticManufacturer.Client/index.html
+++ b/PlasticManufacturer.Client/index.html
@@ -5,33 +5,56 @@
     <title>Plastic Manufacturer</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!--<link rel="stylesheet" href="node_modules/ng2f-bootstrap/dist/bootstrap.min.css">-->
-    <link href="node_modules/toastr/build/toastr.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="styles.css">
+    <title>F&amp;D PLASTICS | Exellence In Color</title>
+    <link rel="shortcut icon" type="image/x-icon" href="~/css/images/favicon.ico" />
 
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <!--<script src="node_modules/jquery/dist/jquery.min.js"></script>-->
+    <!--<script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>-->
     <script src="node_modules/toastr/build/toastr.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="node_modules/rxjs/bundles/Rx.js"></script>
+    <!--  <script src="node_modules/angular2/bundles/angular2.dev.js"></script>-->
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-   <script src="node_modules/rxjs/bundles/Rx.js"></script>
-   <!--  <script src="node_modules/angular2/bundles/angular2.dev.js"></script>-->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="styles.css">
+    <link href="app/css/facebox.css" rel="stylesheet" />
 
-
-    <link href="node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="app/js/facebox.js"></script>
+    <script src="app/js/jquery-fns.js"></script>
+    <!--<script src="http://test.newfdplastics.com/js/facebox.js"></script>
+    <script src="http://test.newfdplastics.com/js/jquery-fns.js"></script>-->
+
+  <link href="node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet" />
+
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
 
     <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/responsive/2.2.0/js/dataTables.responsive.min.js"></script>
 
+
     <script src="systemjs.config.js"></script>
     <script>
         System.import('app').catch(function (err) { console.error(err); });
+    </script>
+    <script type="text/javascript">
+        $(function () {
+            $('#ch').change(function () {
+                var value = $(this).val();
+                if (value == '0') {
+                    $('#div_dch').show();
+
+                } else {
+                    $('#div_dch').hide();
+                }
+            });
+        });
     </script>
 </head>
 
